--- a/src/main/resources/static/portal.css
+++ b/src/main/resources/static/portal.css
@@ -6,7 +6,7 @@ body {
     background-color: #FFFFFF;
     width: 400px;
     padding: 40px 0;
-    margin: 35% auto; /* centre */
+    margin: 30px auto; /* centre */
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.35);
 }
