--- a/src/main/resources/static/home.css
+++ b/src/main/resources/static/home.css
@@ -46,7 +46,7 @@ li
 
 #pageContent
 {
-    height: 100%;
+    min-height: 100%;
     background: rgb(135,156,129);
     line-height: 25px;
     padding: 30px 30;
